--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,10 +10,44 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- task: AzureCLI@2
+  inputs:
+    azureSubscription: 'sc-az400practice'
+    scriptType: 'bash'
+    scriptLocation: 'inlineScript'
+    inlineScript: |
+      #!/bin/sh
+      
+      RESOURCE_GROUP_NAME="rg-az400practice"
+      STORAGE_ACCOUNT_NAME="saaz400practice"
+      
+      # Create Resource Group
+      az group create -l uksouth -n $RESOURCE_GROUP_NAME
+      
+      # Create Storage Account
+      az storage account create -n $STORAGE_ACCOUNT_NAME -g $RESOURCE_GROUP_NAME -l uksouth --sku Standard_LRS
+      
+      # Create Storage Account blob
+      az storage container create  --name tfstate --account-name $STORAGE_ACCOUNT_NAME
+
+- task: AzureCLI@2
+  inputs:
+    azureSubscription: 'sc-az400practice'
+    scriptType: 'bash'
+    scriptLocation: 'inlineScript'
+    inlineScript: |
+      #!/bin/sh
+      
+      AZURE_AD_GROUP_NAME="devopsjourney-aks-group"
+      CURRENT_USER_OBJECTID=$(az ad signed-in-user show --query objectId -o tsv)
+      
+      # Create Azure AD Group
+      az ad group create --display-name $AZURE_AD_GROUP_NAME --mail-nickname $AZURE_AD_GROUP_NAME
+      
+      # Add Current az login user to Azure AD Group
+      az ad group member add --group $AZURE_AD_GROUP_NAME --member-id $CURRENT_USER_OBJECTID
+      
+      AZURE_GROUP_ID=$(az ad group show --group "devopsjourney-aks-group" --query objectId -o tsv)
+      
+      echo "AZURE AD GROUP ID IS: $AZURE_GROUP_ID"
