--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
       STORAGE_ACCOUNT_NAME="saaz400practice"
       
       # Create Resource Group
-      az group create -l uksouth -n $RESOURCE_GROUP_NAME
+      az group create -l eastus -n $RESOURCE_GROUP_NAME
       
       # Create Storage Account
       az storage account create -n $STORAGE_ACCOUNT_NAME -g $RESOURCE_GROUP_NAME -l uksouth --sku Standard_LRS
