Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,11 +43,11 @@ steps:
       CURRENT_USER_OBJECTID=$(az ad signed-in-user show --query objectId -o tsv)
       
       # Create Azure AD Group
+      echo az ad group create --display-name $AZURE_AD_GROUP_NAME --mail-nickname $AZURE_AD_GROUP_NAME
       az ad group create --display-name $AZURE_AD_GROUP_NAME --mail-nickname $AZURE_AD_GROUP_NAME
-      
       # Add Current az login user to Azure AD Group
+      echo az ad group member add --group $AZURE_AD_GROUP_NAME --member-id $CURRENT_USER_OBJECTID
       az ad group member add --group $AZURE_AD_GROUP_NAME --member-id $CURRENT_USER_OBJECTID
-      
       AZURE_GROUP_ID=$(az ad group show --group "devopsjourney-aks-group" --query objectId -o tsv)
       
       echo "AZURE AD GROUP ID IS: $AZURE_GROUP_ID"
